Bug 1458624 - Firefox on Linux now sends signal strength to geolocation API as RSSI dBm instead of a percentage. r=cpeterson

Differential Revision: https://phabricator.services.mozilla.com/D38266